--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,16 @@
     <groupId>jk.common.util</groupId>
     <artifactId>xsd-xpath-generator</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <scm>
+        <developerConnection>scm:git:https://github.com/imjksingh/xsd-xpath-generator.git</developerConnection>
+    </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
